<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="8dip">

            <TextView
                android:id="@+id/accelerometer_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/hint_password"
                android:paddingRight="15dp"
                android:text="@string/accelerometer_text"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/chekcbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="8dip">

            <TextView
                android:id="@+id/gps_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/hint_password"
                android:paddingRight="15dp"
                android:text="@string/gps_text"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/chekcbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>